--- a/第一次打卡.md
+++ b/第一次打卡.md
@@ -1,4 +1,4 @@
-###Algorithm
+##Algorithm
 
 转行计算机1年有余，对计算机的兴趣有增无减。记得去年的八月份，是KMP开启了我的算法之旅，所以这次就用更快一些的字符串匹配BM来再续算法的乐章，时刻提醒自己不忘初心，与时俱进。  
 leetCode 28 实现strStr()  
@@ -81,7 +81,6 @@ func max(a []int) int{
     return max
 }
 ~~~
-
 ###Review
 
 很惭愧，这次没有读英文，就先分享一个程序员易读错的英文单词吧。  
