--- a/第一次打卡.md
+++ b/第一次打卡.md
@@ -1,4 +1,4 @@
-##Algorithm
+### Algorithm
 
 转行计算机1年有余，对计算机的兴趣有增无减。记得去年的八月份，是KMP开启了我的算法之旅，所以这次就用更快一些的字符串匹配BM来再续算法的乐章，时刻提醒自己不忘初心，与时俱进。  
 leetCode 28 实现strStr()  
@@ -81,16 +81,16 @@ func max(a []int) int{
     return max
 }
 ~~~
-###Review
+### Review
 
 很惭愧，这次没有读英文，就先分享一个程序员易读错的英文单词吧。  
 https://github.com/shimohq/chinese-programmer-wrong-pronunciation
 
-###Tip
+### Tip
 
 我会在本周补上。
 
 
-###Share
+### Share
 
 分享一些个人的感悟吧。我认为虽然学习是一个漫长的过程，但是适时地来一些成就感是很重要的。上周日我实在忍受不了填鸭式的摄入知识了，于是就买了一个魔方，最简单的3阶，花了一个多小时的时间才独立拼成，但是当天下午心情十分愉悦，因为这一小时的时间投入很快就开花结果了，而我沐浴在成就感里，重新激情满满。在我自己的学习生涯，我很明确当下的努力一定是有用的，但是迟迟看不到回报又总会使我迷茫，所以适当地分一分心，学一些简单的东西，做出一些小小的成绩，获得一点小小的窃喜是很好的。
